<resources>
    <string name="app_name">First App</string>
    <string name="app_name_rus">Приложение #1</string>
    <string name="activity_main_label">Главное меню</string>
    <string name="activity_authorize_label">Авторизация</string>
    <string name="activity_about_label">О приложении</string>
    <string name="activity_work_with_display_label">Работа с экраном</string>
    <string name="activity_beer_info_label">О пиве</string>
    <string name="activity_stopwatch_label">Секундомер</string>
    <string name="activity_berserk_cards_info_label">Карты из настолки \"Берсерк\"</string>
    <string name="authorize_button_text">Авторизоваться</string>
    <string name="say_kek_button_text">Сказать Кек</string>
    <string name="say_kek_with_ricardo_button_text">Сказать Кек и показать Рикардо</string>
    <string name="get_orientation_button_text">Узнать ориентацию</string>
    <string name="work_with_display_button_text">Поработать с экраном</string>
    <string name="beer_info_button_text">Узнать о пиве</string>
    <string name="stopwatch_button_text">Секундомер</string>
    <string name="berserk_cards_info_button_text">Посмотреть карты из настолки \"Берсерк\"</string>
    <string name="hello_before_user_name">Здравствуй,</string>
    <string name="default_first_user_name">Неизвестный</string>
    <string name="default_second_user_name">пользователь</string>
    <string name="input_first_user_name">Ваше имя</string>
    <string name="input_second_user_name">Ваша фамилия</string>
    <string name="complete_authorize_button_text">Готово</string>
    <string name="about_app_text">Версия приложения %1$s. По всем вопросам обращаться на <b>io.skvortsov@mail.ru</b></string>
    <string name="berserk_card_cost_text">Стоимость: %1$d</string>
    <string name="action_authorize">Авторизоваться</string>
    <string name="action_settings">Настройки</string>
    <string name="action_about_app">О приложении</string>
    <string name="go_to_system_display_settings_button_text">Настройки экрана смартфона</string>
    <string name="current_brightness_start_text">Текущая яркость экрана: %1$d%%</string>
    <string name="how_to_change_brightness_note_text">Подсказка: Вы можете изменить яркость текущей активити, просто перетащив ползунок!</string>
    <string name="text_for_beer_global_type_spinner">Выберите тип пива:</string>
    <string name="text_for_beer_subtype_spinner">Выберите подтип пива:</string>
    <string name="show_beer_info_button_text">Показать информацию</string>
    <string name="default_beer_info_text_on_paper">Здесь пока что пусто…\nВыберите тип и подтип пива и нажмите на кнопку \"Показать информацию\"</string>
    <string-array name="global_beer_types">
        <item>Эль</item>
        <item>Лагер</item>
        <item>Смешанное</item>
    </string-array>
    <string-array name="ale_beer_types">
        <item>Пшеничное пиво</item>
        <item>Берлинское белое</item>
        <item>Блонд эль</item>
        <item>Светлый эль</item>
        <item>Кёльш</item>
        <item>Золотой эль</item>
        <item>Трипель</item>
        <item>Индийский светлый эль</item>
        <item>Старый эль</item>
        <item>Янтарный эль</item>
        <item>Квадрупель</item>
        <item>Мягкий эль</item>
        <item>Старое коричневое</item>
        <item>Коричневый эль</item>
        <item>Портер</item>
        <item>Стаут</item>
    </string-array>
    <string-array name="lager_beer_types">
        <item>Мюнхенское светлое</item>
        <item>Пильзнер</item>
        <item>Экспорт (дортмундер)</item>
        <item>Венский лагер</item>
        <item>Келлербир</item>
        <item>Бок</item>
        <item>Темный лагер</item>
        <item>Черное пиво</item>
    </string-array>
    <string-array name="mixed_beer_types">
        <item>Сливочный эль</item>
        <item>Ламбик</item>
        <item>Мартовское пиво</item>
    </string-array>
    <string name="beer_info_ale_witbier">Пшеничное пиво — ферментированное пшеничное пиво верхового брожения.\n
        Характеризуется добавкой к ячменному солоду пшеничного солода или пшеницы при изготовлении пивного сусла.
        Имеет банановый пряный вкус, что обусловлено значительным содержанием эфиров, возникающих за счет высоких
        температур брожения. На вкус и аромат пшеничного пива прежде всего влияют такие вещества, как изоамилацетат
        и 4-винил гваякол. Пшеничное пиво особенно распространено в Баварии и Южной Германии. Это, как правило,
        мутное (нефильтрованное) и светлое пиво. Но бывает и фильтрованное пшеничное пиво (Кристаллвайцен, нем.
        Kristallweizen) и тёмное пшеничное пиво (Дункельвайцен, нем. Dunkelweizen). В России производство пшеничного
        пива стало активно развиваться в 2000-х. Пшеничное пиво российского производства представлено в основном
        лагерами, технология верхового брожения почти не применяется. На российском массовом рынке пива медалью
        международной премии отмечено пиво верхового брожения «Хамовники Пшеничное» (золотая медаль премии
        «Monde Selection 2014»).</string>
    <string name="beer_info_ale_berliner_weisse">Берлинер Вайссе — разновидность кислого пива.\n
        В начале XIX века берлинский пивовар добавил к пиву травы. Позже добавление трав было заменено добавкой
        сиропа из подмаренника душистого или малины. Добавляется сироп или сразу при производстве или позже, отдельно.
        Во втором случае сначала наливают сироп, примерно 20 миллилитров, а потом бутылку 0,33 литра белого пива.
        Индивидуальные смеси с шампанским или ликёрами тоже распространены.</string>
    <string name="beer_info_ale_belgian_blond_ale">Бельгийский блонд эль — очень светлый эль.\n
        Эта относительно новая разработка бельгийских пивоваров для привлечения внимания потребителей европейского
        пильзнера в последние десятилетия становится всё более популярной на мировом рынке.По крепости напоминает
        дуббель, по характеру бельгийский крепкий золотой эль и триппель, но слаще и менее горький. Во Фландрии
        и Нидерландах для обозначения используется термин Blond, в Валлонии и Франции — Blonde.
        Блонд эль производится из бельгийского солода, ароматного солода, содержит жидкий сахар или сахарозу,
        бельгийские штаммы дрожжей, которые производят сложные спирты, фенолы и ароматы, благородные сорта хмеля
        Styrian Goldings или East Kent Goldings. Цвет варьируется от светлого до тёмно-золотистого, пиво имеет очень
        хорошую прозрачность и образуют большую плотную кремообразную пену от белого до кремового цвета.
        Характеризуется солодовой сладостью, мягким хмелевым привкусом и богатым и пряным ароматом хмеля и
        сладкого солода. Содержание алкоголя: 6,0–7,5%.</string>
    <string name="beer_info_ale_pale_ale">Пейл-эль — одна из разновидностей английского пива.\n
        Обычно под обозначением Pale понимают светлую окраску какого-либо пива, а в случае с элем — некое светлое
        пиво, полученное методом верхового брожения и содержащее небольшое количество углекислоты. В данном случае
        это не совсем верно: применительно к этому пиву понятие Pale возникло для отличия сортов, производимых в
        городе Бертон-апон-Трент, от тёмного портера (Porter) и ещё более тёмного стаута (Stout) — по сравнению
        с последними двумя, пиво цвета бронзы или даже меди кажется светлым. В отличие от биттера (Bitter),
        терпко-горьковатого пива, обычно хранящегося и транспортируемого в бочках, пейл-эль сегодня чаще разливается
        и «созревает» в бутылках. В этой форме пиво, как правило, получается более пряным и более высокого качества.
        Для его изготовления используется особый солод, который придаёт продукту не светлый, а, скорее, бронзовый
        оттенок. Наиболее знаменит пейл-эль, сваренный в Бертоне и его окрестностях, а также в Тадкастере.</string>
    <string name="beer_info_ale_kolsch">Кёльш — название специального светлого пива, которое варится в городе Кёльн.\n
        Это пиво верхового брожения имеет слегка горький вкус, чувствуется хмель. Содержание алкоголя 4,8 %. Какое
        пиво имеет право называться Кёльш, определено в «Конвенции кёльш». В 1997 Кёльш Евросоюзом был принят в
        число защищённых региональных сортов. Кёльш пьют из специальных стаканов вместимостью 0,2 литра. Постепенно
        входят в употребление и бо́льшие стаканы вместимостью 0,3 или 0,4 литра. В пивных, где особо ценят традицию,
        можно встретить и пол-кёльша в стакане вместимостью 0,1 литра. Как большинство сортов пива верхового брожения,
        кёльш раскрывает свой полный аромат только при определённой температуре. Поэтому его пьют не «ледяным», а
        при температуре 8-10 °C.</string>
    <string name="beer_info_ale_golden_ale">Информации нет:(</string>
    <string name="beer_info_ale_tripel_ale">Трипель, или бельгийский трипл эль  — крепкий светлый бельгийский эль,
        подвид стиля \"бельгийский крепкий эль\".\n
        Трипель (тройной эль) — термин, используемый траппистскими и аббатскими пивоварнями для обозначения своих
        самых крепких сортов пива. Этот стиль был разработан в 1930 году в бельгийском аббатстве Вестмале. Пивоварня
        выпустила первый трипель под названием Superbier (\"суперпиво\") в 1934 г. В 1956 году рецепт модифицирует,
        добавив больше хмеля, брат Томас, главный пивовар Вестмале, и пиво меняет название на трипель. В таком виде
        оно остается практически неизменным по сей день.Трипель быстро стал популярным стилем и распространился в США
        и другие страны, где находится в ведении ряда светских пивоваров (например, Bosteels и St.Bernardus),
        производящих крепкие сорта светлого пива в стиле Westmalle Tripel.</string>
    <string name="beer_info_ale_india_pale_ale">Индийский пейл-эль  — сильно охмеленная разновидность пейл-эля.
        Хмель придаёт пиву богатый аромат и приятную горечь. Это наиболее востребованный стиль крафтового пива в США.\n
        Первое упоминание об индийском пейл-эле найдено в Sydney Gazette (Австралия) за 1829 год. Название объясняется
        тем, что в XIX веке это был основной вид пива, поставляемый из метрополии в Британскую Индию. Невероятно горький
        эль с высоким содержанием хмеля и крепостью выдерживал многомесячное путешествие в южных широтах лучше других
        сортов. Ко времени поступления потребителям в Индии его вкус смягчался и становился приемлемым. Основной
        вклад в создание этого пива внесли крупные пивоварни Бертона-на-Тренте, которые до континентальной блокады
        экспортировали свою продукцию преимущественно в Российскую империю. Переориентация этих производителей на
        индийских потребителей связана с тем, что царский министр Е. Ф. Канкрин, будучи сторонником протекционизма,
        ввёл в 1822 г. запретительный тариф, затруднявший доступ иностранных продуктов на российский рынок. Почти
        весь экспорт пива из Англии остановился, крупные партии застряли в порту Кронштадта.</string>
    <string name="beer_info_ale_old_ale">Старый эль — традиционное английское пиво, тип эля, который
        выдерживается в течение нескольких месяцев или даже лет в деревянных бочках, с содержанием алкоголя от 4,0
        до 9,5% об.\n
        Старый эль — традиционный тип английского эля с многовековой историей. После первичного брожения старый эль
        оставляют для старения на складах пивоварни. Пиво использовалось для смешивания или для непосредственного
        употребления — чаще всего, для торжественных случаев. В зимние месяцы варили Winter warmer — современную версию
        старого эля, который обычно более тёмный и который предлагают сезонные пивоварни на Рождество и в зимние месяцы.</string>
    <string name="beer_info_ale_amber_ale">Информации нет:(</string>
    <string name="start_stopwatch_button_text">Запустить</string>
    <string name="stop_stopwatch_button_text">Остановить</string>
    <string name="refresh_stopwatch_button_text">Сбросить</string>
</resources>