<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_authorize"
        android:orderInCategory="100"
        android:title="@string/action_authorize"
        android:onClick="onAuthorizeMenuClick"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:onClick="onSettingsMenuClick"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about_app"
        android:orderInCategory="100"
        android:title="@string/action_about_app"
        android:onClick="onAboutAppMenuClick"
        app:showAsAction="never"/>

</menu>