<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/baseActivitiesBackground"
    tools:context="ru.sk1ly.firstapp.BeerInfoActivity">

    <TextView
        android:id="@+id/text_for_beer_global_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_for_beer_global_type_spinner" />

    <Spinner
        android:id="@+id/beer_global_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_for_beer_global_type_spinner"
        android:layout_alignEnd="@+id/beer_subtype_spinner"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/text_for_beer_global_type_spinner"
        android:entries="@array/global_beer_types" />

    <TextView
        android:id="@+id/text_for_beer_subtype_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_for_beer_global_type_spinner"
        android:layout_alignStart="@+id/text_for_beer_global_type_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/text_for_beer_subtype_spinner" />

    <Spinner
        android:id="@+id/beer_subtype_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/beer_global_type_spinner"
        android:layout_alignTop="@id/text_for_beer_subtype_spinner"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/text_for_beer_subtype_spinner" />

    <Button
        android:id="@+id/show_beer_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_for_beer_subtype_spinner"
        android:layout_centerHorizontal="true"
        android:onClick="onClickShowBeerInfoButton"
        android:text="@string/show_beer_info_button_text" />

    <ImageView
        android:id="@+id/beer_info_paper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/show_beer_info_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/beer_info_activity_paper" />

    <TextView
        android:id="@+id/beer_info_text_on_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/beer_info_paper"
        android:layout_alignTop="@id/beer_info_paper"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="25dp"
        android:text="@string/default_beer_info_text_on_paper"
        android:textStyle="italic" />

</RelativeLayout>